--- a/package.json
+++ b/package.json
@@ -9,25 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@eva-design/eva": "^2.2.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native-stack": "^6.9.17",
+    "@ui-kitten/components": "^5.3.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "react": "18.2.0",
-<<<<<<< HEAD
-    "react-native": "^0.72.6",
-    "react-native-web": "~0.19.6",
-    "react-dom": "18.2.0",
-    "@expo/webpack-config": "^19.0.0"
-=======
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-native": "^0.72.6",
-    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "^13.9.0",
     "react-native-web": "~0.19.6"
->>>>>>> a9e1ebcfd0c3916eb550b5a4d819ac50f67489f1
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
