--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native-stack": "^6.9.17",
     "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.6.3",
@@ -21,7 +22,9 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-native": "^0.72.6",
+    "react-native-maps": "1.7.1",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-native-xml2js": "^1.0.3",
     "react-xml-parser": "^1.1.8"
