--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@eva-design/eva": "^2.2.0",
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native-stack": "^6.9.17",
-    "@ui-kitten/components": "^5.3.1",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@ui-kitten/components": "^5.3.1",
     "axios": "^1.6.3",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
@@ -25,13 +26,12 @@
     "react-hook-form": "^7.49.2",
     "react-native": "^0.72.6",
     "react-native-maps": "1.7.1",
-    "react-native-svg": "^13.9.0",
     "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-web": "~0.19.6",
     "react-native-xml2js": "^1.0.3",
-    "react-xml-parser": "^1.1.8",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "react-xml-parser": "^1.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
