--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-native-web": "~0.19.6",
     "react-native-xml2js": "^1.0.3",
     "react-xml-parser": "^1.1.8",
-    "@react-native-async-storage/async-storage": "1.18.2"
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "lottie-react-native": "5.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
