--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-hook-form": "^7.49.2",
     "react-native": "^0.72.6",
     "react-native-maps": "1.7.1",
-    "react-native-svg": "^13.9.0",
+    "react-native-svg": "13.9.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-ui-datepicker": "^1.0.11",
     "react-native-tab-view": "^3.5.2",
