--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-native-web": "~0.19.6",
     "react-native-xml2js": "^1.0.3",
     "@react-native-async-storage/async-storage": "1.18.2",
-    "lottie-react-native": "5.1.6"
+    "lottie-react-native": "5.1.6",
     "react-xml-parser": "^1.1.8"
   },
   "devDependencies": {
