--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-native-ui-datepicker": "^1.0.11",
     "react-native-web": "~0.19.6",
     "react-native-xml2js": "^1.0.3",
-    "react-xml-parser": "^1.1.8"
+    "react-xml-parser": "^1.1.8",
+    "expo-location": "~16.1.0",
+    "expo-device": "~5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
