--- a/app.json
+++ b/app.json
@@ -7,9 +7,8 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff",
+      "image": "./assets/splashImg.png",
+      "resizeMode": "cover",
       "plugins": [
         [
           "expo-location",
